# ice

./: database_schema.sql  package-lock.json  run_app.bat
ice-app/: Cargo.toml  tailwind.config.js
ice-app/app/: package-lock.json  package.json  vite.config.ts
ice-app/app/src/: App.tsx
ice-app/app/src-tauri/: Cargo.toml  tauri.conf.json
ice-app/app/src-tauri/src/: commands.rs  database.rs
ice-app/src/: App.tsx  styles.css
ice-app/src-tauri/: Cargo.toml  tauri.conf.json
ice-app/src-tauri/src/: main.rs  models.rs  reminder_worker.rs  wifi_utils.rs
ice-app/src/components/: AmbientSoundMixer.tsx
