
[package]
name = "ice-app"
version = "1.0.0"
description = "A modern productivity app."
authors = ["You"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
